--- a/frontend/src/static/css/config/_light_theme.scss
+++ b/frontend/src/static/css/config/_light_theme.scss
@@ -120,17 +120,17 @@ body {
 
 	/* ################################################## */
 
-	--item-bg-color: #fafafa;
+	--item-bg-color: var(--user-action-form-inner-bg-color);
 
 	--item-title-text-color: #111;
 
-	--item-thumb-bg-color: var(--sidebar-bg-color);
+	--item-thumb-bg-color: var(--user-action-form-inner-bg-color);
 
 	--item-meta-text-color: rgba(17, 17, 17, 0.6);
 	--item-meta-link-text-color: var(--item-text-color);
 	--item-meta-link-hover-text-color: rgba(17, 17, 17, 0.8);
 
-	--profile-page-item-content-title-bg-color: #fff;
+	--profile-page-item-content-title-bg-color: var(--user-action-form-inner-bg-color);
 
 	--playlist-item-main-view-full-link-text-color: rgb(96, 96, 96);
 	--playlist-item-main-view-full-link-hover-text-color: rgb(13, 13, 13);
@@ -168,12 +168,12 @@ body {
 	/* ################################################## */
 
 	// --playlist-view-header-bg-color: #eee;
-	--playlist-view-header-bg-color: #fafafa;
+	--playlist-view-header-bg-color: var(--user-action-form-inner-bg-color);
 
 	--playlist-view-header-toggle-text-color: rgb(96, 96, 96);
 
 	// --playlist-view-header-toggle-bg-color: #eee;
-	--playlist-view-header-toggle-bg-color: #fafafa;
+	--playlist-view-header-toggle-bg-color: var(--user-action-form-inner-bg-color);
 
 	--playlist-view-title-link-text-color: rgb(13, 13, 13);
 
@@ -187,11 +187,11 @@ body {
 	--playlist-view-status-icon-text-color: rgba(17, 17, 17, 0.4);
 
 	// --playlist-view-actions-bg-color: #eee;
-	--playlist-view-actions-bg-color: #fafafa;
+	--playlist-view-actions-bg-color: var(--user-action-form-inner-bg-color);
 
 	// --playlist-view-media-bg-color: #f5f5f5;
 	// --playlist-view-media-bg-color: rgba(238,238,238, 0.7);
-	--playlist-view-media-bg-color: var(--sidebar-bg-color);
+	--playlist-view-media-bg-color: var(--body-bg-color);
 
 	--playlist-view-media-order-number-color: rgb(136, 136, 136);
 
@@ -201,11 +201,11 @@ body {
 
 	// --playlist-view-item-author-bg-color: #f5f5f5;
 	// --playlist-view-item-author-bg-color: rgba(238,238,238, 0.7);
-	--playlist-view-item-author-bg-color: var(--sidebar-bg-color);
+	--playlist-view-item-author-bg-color: var(--body-bg-color);
 
 	/* ################################################## */
 
-	--profile-page-bg-color: #fff;
+	--profile-page-bg-color: var(--body-bg-color);
 
 	--profile-page-header-bg-color: var(--body-bg-color);
 
@@ -243,13 +243,13 @@ body {
 
 	/* ################################################## */
 
-	--playlist-page-bg-color: rgb(250, 250, 250);
+	--playlist-page-bg-color: var(--body-bg-color);
 	--playlist-page-details-text-color: rgb(96, 96, 96);
-	--playlist-page-thumb-bg-color: rgba(0, 0, 0, 0.07);
+	--playlist-page-thumb-bg-color: var(--item-thumb-bg-color);
 	--playlist-page-title-link-text-color: rgb(13, 13, 13);
 
 	--playlist-page-actions-circle-icon-text-color: rgb(144, 144, 144);
-	--playlist-page-actions-circle-icon-bg-color: rgb(250, 250, 250);
+	--playlist-page-actions-circle-icon-bg-color: var(--user-action-form-inner-bg-color);
 
 	--playlist-page-actions-nav-item-button-text-color: rgb(10, 10, 10);
 
@@ -268,34 +268,34 @@ body {
 	--playlist-page-author-edit-playlist-icon-button-text-color: rgb(96, 96, 96);
 
 	// --playlist-page-author-edit-playlist-icon-button-bg-color: rgb(250, 250, 250);
-	--playlist-page-author-edit-playlist-icon-button-bg-color: #fafafa;
+	--playlist-page-author-edit-playlist-icon-button-bg-color: var(--user-action-form-inner-bg-color);
 
 	--playlist-page-author-edit-playlist-icon-button-active-text-color: rgb(13, 13, 13);
 
 	--playlist-page-author-edit-playlist-form-wrap-text-color: rgb(13, 13, 13);
-	--playlist-page-author-edit-playlist-form-wrap-bg-color: #fff;
+	--playlist-page-author-edit-playlist-form-wrap-bg-color: var(--user-action-form-inner-bg-color);
 
-	--playlist-page-author-edit-playlist-form-wrap-border-color: #eee;
+	--playlist-page-author-edit-playlist-form-wrap-border-color: var(--user-action-form-inner-input-border-color);
 
 	--playlist-page-author-edit-playlist-form-wrap-title-circle-icon-hover-text-color: #111;
 
 	--playlist-page-author-edit-playlist-author-thumb-text-color: #606060;
-	--playlist-page-author-edit-playlist-author-thumb-bg-color: rgba(0, 0, 0, 0.07);
+	--playlist-page-author-edit-playlist-author-thumb-bg-color: var(--item-thumb-bg-color);
 
-	--playlist-page-details-bg-color: #fafafa;
+	--playlist-page-details-bg-color: var(--user-action-form-inner-bg-color);
 
 	// --playlist-page-video-list-bg-color: #fff;
 	// --playlist-page-video-list-bg-color: #fafafa;
-	--playlist-page-video-list-bg-color: #f5f5f5;
+	--playlist-page-video-list-bg-color: var(--body-bg-color);
 
 	// --playlist-page-video-list-item-title-bg-color: #fff;
-	--playlist-page-video-list-item-title-bg-color: #f5f5f5;
+	--playlist-page-video-list-item-title-bg-color: var(--body-bg-color);
 
 	// --playlist-page-video-list-item-hover-bg-color: rgb(245, 245, 245);
-	--playlist-page-video-list-item-hover-bg-color: #ebebeb;
+	--playlist-page-video-list-item-hover-bg-color: var(--cinemata-neutral-100);
 
 	// --playlist-page-video-list-item-title-hover-bg-color: rgb(245, 245, 245);
-	--playlist-page-video-list-item-title-hover-bg-color: #ebebeb;
+	--playlist-page-video-list-item-title-hover-bg-color: var(--cinemata-neutral-100);
 
 	--playlist-page-video-list-item-after-bg-color: rgba(0, 0, 0, 0.1);
 	--playlist-page-video-list-item-order-text-color: rgb(96, 96, 96);
